# MapViewer4Android

./: README.md
Mobile-UXSDK-Android-master4/: Mobile.docx  RotationGestureDetector.java  RotationGestureOverlay.java  Tab_Sensors.java  ToDoList.txt  key.txt  key4.txt  links.txt  mv_Marker.java  simplerow0.xml  tab_sensors.xml
Mobile-UXSDK-Android-master4/sample/: Android_API.txt  DATA_SIMs.txt  Route.kml  Route.kmz  build.gradle  deps.txt  exec.bat  gradle.properties  local.properties  mapviewer.jks  settings.gradle  zar.kml  zarzar.geojson
Mobile-UXSDK-Android-master4/sample/ColorPicker/: build.gradle
Mobile-UXSDK-Android-master4/sample/ColorPicker/src/main/java/com/pes/androidmaterialcolorpickerdialog/: ColorFormatHelper.java  ColorPicker.java  ColorPickerCallback.java  MaterialColorPickerTextSeekBar.java
Mobile-UXSDK-Android-master4/sample/app/: build.gradle
Mobile-UXSDK-Android-master4/sample/app/src/main/: AndroidManifest.xml
Mobile-UXSDK-Android-master4/sample/app/src/main/assets/MapViewer/: Settings.txt
Mobile-UXSDK-Android-master4/sample/app/src/main/assets/MapViewer/DB/: syria.db
Mobile-UXSDK-Android-master4/sample/app/src/main/cpp/: CMakeLists.txt  CONSTANTS.H  GeoLocationLib.cpp  GeoLocationLib.h  HH.h  LatLong-UTMconversion.cpp  LatLong-UTMconversion.h  Protection.cpp  Protection.h  SimpleIni.h  adam.cpp  adam.h  hasan.cpp  hosien.cpp  iniFile.cpp  iniFile.h  mission.cpp  mission.h  native-lib.cpp  tcp_client.cpp  tcp_client.h  tcp_io_handler.cpp  tcp_io_handler.h  tcp_lib.cpp  tcp_lib.h  tcp_server.cpp  tcp_server.h  test-aes.cpp  tools.h  utils.cpp  utils.h
Mobile-UXSDK-Android-master4/sample/app/src/main/cpp/SFML/: System.hpp
Mobile-UXSDK-Android-master4/sample/app/src/main/cpp/SFML/Network/: Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketImpl.cpp  SocketImpl.hpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp  list.txt
Mobile-UXSDK-Android-master4/sample/app/src/main/cpp/SFML/System/: Activity.cpp  Activity.hpp  ClockImpl.cpp  ClockImpl.hpp  Err.cpp  FileInputStream.cpp  Lock.cpp  MemoryInputStream.cpp  Mutex.cpp  MutexImpl.cpp  MutexImpl.hpp  NativeActivity.cpp  ResourceStream.cpp  ResourceStream.hpp  Sleep.cpp  SleepImpl.cpp  SleepImpl.hpp  Thread.cpp  Thread.hpp  ThreadImpl.cpp  ThreadImpl.hpp  ThreadLocal.cpp  ThreadLocalImpl.cpp  ThreadLocalImpl.hpp  ThreadLocalPtr.hpp  list.bat  list.txt
Mobile-UXSDK-Android-master4/sample/app/src/main/cpp/SFML/Window/: EGLCheck.hpp  EglContext.hpp  GlContext.hpp
Mobile-UXSDK-Android-master4/sample/app/src/main/java/com/balda/flipper/: StorageManagerCompat.java
Mobile-UXSDK-Android-master4/sample/app/src/main/java/com/blankj/subutil/util/: BatteryUtils.java  DangerousUtils.java  LocationUtils.java  PinyinUtils.java
Mobile-UXSDK-Android-master4/sample/app/src/main/java/com/oghab/mapviewer/: ChangeCallStateListener.java  DJIConnectionControlActivity.java  IconActivity.java  IncomingDataSms.java  IncomingSms.java  MApplication.java  MainActivity.java  MyGLActivity.java  MyGLRenderer.java  NotificationView.java  OnDJIUSBAttachedReceiver.java  PhoneCallListener.java  PhotoCube.java
Mobile-UXSDK-Android-master4/sample/app/src/main/java/com/oghab/mapviewer/launcher/: Actions.java  MapViewerService.java  Server.java  ServiceTracker.java  StartReceiver.java  log.java
Mobile-UXSDK-Android-master4/sample/app/src/main/java/com/oghab/mapviewer/mapviewer/: Accelerometer.java  CitiesAdapter.java  City.java  ColorCrosshairView.java  Cross_Overlay.java  (+38 more)
Mobile-UXSDK-Android-master4/sample/app/src/main/res/drawable/: all_corners_rounder.xml  button_blue.xml  button_green.xml  button_red.xml  checked_favourites.xml  checked_gps_follow.xml  checked_grid.xml  checked_mission_control.xml  checked_plane_flight.xml  checked_plane_flight2.xml  checked_polygon.xml  checked_polyline.xml  checked_rulers.xml  checked_user_group.xml  checked_voice.xml  checked_ylw_pushpin.xml  circle_blue.xml  circle_green.xml  circle_red.xml  close_button.xml  customborder2.xml  customborder3.xml  customborder_gray.xml  customborder_gray_transparent.xml  customborder_green.xml  customborder_red.xml  ic_folder.xml  mapviewer_button.xml  mv_btn_colored_material.xml  mv_btn_default_mtrl_shape.xml  popup_background.xml  radio_camera.xml  radio_main.xml  radio_map.xml  radio_messenger.xml  radio_sensors.xml  received_frame.xml  sent_frame.xml  simple_ip_row_background_selector.xml  tile_background.xml  (+1 more)
Mobile-UXSDK-Android-master4/sample/app/src/main/res/layout/: activity_main.xml  activity_reader.xml  camera_settings.xml  dialog_data_paths.xml  dialog_insert_pos.xml  dialog_limits_setting.xml  dialog_mission_paths.xml  geometry_settings_dialog.xml  icon_dialog.xml  icons_dialog.xml  icons_gridview.xml  layout_file_viewer.xml  mapviewer_bubble.xml  mark1_dialog.xml  mark2_dialog.xml  mark3_dialog.xml  member_layout.xml  messenger_error.xml  messenger_file.xml  messenger_image.xml  messenger_location.xml  messenger_message.xml  messenger_message_actions.xml  messenger_video.xml  mission_settings.xml  new_placemark_dialog.xml  projectile_chart.xml  projectile_settings.xml  simple_ip_row.xml  simple_mission_row.xml  simplerow.xml  string_layout.xml  tab_camera.xml  tab_camera_emulator.xml  tab_main.xml  tab_map.xml  tab_messenger.xml  view_mapviewer.xml  view_mapviewer_help.xml
Mobile-UXSDK-Android-master4/sample/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
Mobile-UXSDK-Android-master4/sample/app/src/main/res/values-ar/: strings.xml
Mobile-UXSDK-Android-master4/sample/app/src/main/res/xml/: accessory_filter.xml  backup_descriptor.xml  preferences.xml
Mobile-UXSDK-Android-master4/sample/captures/: com.dji.ux.sample_2019.01.19_03.07.li
Mobile-UXSDK-Android-master4/sample/gradle/wrapper/: gradle-wrapper.properties
Mobile-UXSDK-Android-master4/sample/madlocationmanager/: build.gradle
Mobile-UXSDK-Android-master4/sample/valuecounterlib/: build.gradle
Mobile-UXSDK-Android-master4/sample/valuecounterlib/src/main/java/com/mohammedalaa/valuecounterlib/: ValueCounterView.java
(+81 files in other folders)
